Fixed content placement on smaller screen

--- a/src/style/home.css
+++ b/src/style/home.css
@@ -64,7 +64,13 @@
   outline: 2px solid rgb(0, 0, 0);
 }
 
-@media screen and (width <=350px) {
+@media screen and (width <=600px) {
+  .content {
+    width: 300px;
+  }
+}
+
+@media screen and (width <=400px) {
   .content {
     width: 250px;
   }
